@@ -1,3 +1,14 @@
+2011-09-13  Sam Weinig  <sam@webkit.org>
+
+        Object.getPrototypeOf should use JSValue::get()
+        https://bugs.webkit.org/show_bug.cgi?id=67973
+
+        Reviewed by Darin Adler.
+
+        * runtime/ObjectConstructor.cpp:
+        (JSC::objectConstructorGetPrototypeOf):
+        Pipe through JSValue::get() to allow overrides.
+
 2011-09-12  Filip Pizlo  <fpizlo@apple.com>
 
         JavaScriptCore does not have baseline->speculative OSR
